--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
     <div class="container nav">
       <a class="brand" href="#top"><span>ysurtod</span></a>
       <nav class="menu" aria-label="Menu utama">
-        <a href="Porto.html">About</a>
-        <a href="Payhip.html">Project</a>
+        <a href="about.html">About</a>
+        <a href="index.html">Project</a>
       </nav>
       <div class="actions">
         <button class="btn cart" id="openCart" aria-label="Buka keranjang">🛒 <span class="cart-count" id="cartCount">0</span></button>
@@ -740,4 +740,5 @@ modalBackdrop.addEventListener('click',(e)=>{ if(e.target===modalBackdrop){ stop
   </script>
 </body>
 </html>
+
 
