--- a/store/about.html
+++ b/store/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Surya Putra</title>
+  <title>ysurtod</title>
   <meta name="description" content="Portofolio pribadi untuk menampilkan karya, pengalaman, dan informasi kontak." />
   <meta name="color-scheme" content="light dark" />
   <meta name="theme-color" content="#0ea5e9" />
@@ -128,8 +128,8 @@
       <a class="brand" href="#home">ysurtod</a>
       <nav>
         <ul>
-          <li><a href="Porto.html">About</a></li>
-          <li><a href="Payhip.html">Project</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Project</a></li>
         </ul>
       </nav>
       <div class="actions">
@@ -224,3 +224,4 @@
   </script>
 </body>
 </html>
+
