--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div class="container nav">
       <a class="brand" href="#top"><span>ysurtod</span></a>
       <nav class="menu" aria-label="Menu utama">
-        <a href="pages/about.html">About</a>
+        <a href="about.html">About</a>
         <a href="index.html">Project</a>
       </nav>
       <div class="actions">
@@ -740,6 +740,7 @@ modalBackdrop.addEventListener('click',(e)=>{ if(e.target===modalBackdrop){ stop
   </script>
 </body>
 </html>
+
 
 
 
