--- a/about.html
+++ b/about.html
@@ -128,8 +128,8 @@
       <a class="brand" href="#home">ysurtod</a>
       <nav>
         <ul>
-          <li><a href="Porto.html">About</a></li>
-          <li><a href="Payhip.html">Project</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Project</a></li>
         </ul>
       </nav>
       <div class="actions">
@@ -224,3 +224,4 @@
   </script>
 </body>
 </html>
+
