--- a/about.html
+++ b/about.html
@@ -88,6 +88,17 @@
       background-size: 60px 60px;
       animation: moveGrid 10s linear infinite;
     }
+    .hero-card h1 {
+  margin-top: 16px;   /* jarak atas */
+  margin-bottom: 12px; /* jarak bawah */
+  padding-left: 8px;   /* padding kiri */
+}
+
+.hero-card .lead {
+  margin-bottom: 20px; /* jarak bawah */
+  padding-left: 8px;   /* padding kiri */
+}
+
     @keyframes moveGrid {
       from { background-position: 0 0, 0 0; }
       to { background-position: 0 60px, 60px 0; }
@@ -224,4 +235,5 @@
   </script>
 </body>
 </html>
+
 
