--- a/about.html
+++ b/about.html
@@ -88,13 +88,13 @@
       background-size: 60px 60px;
       animation: moveGrid 10s linear infinite;
     }
-    .hero-card h1 {
+    .modal h1 {
   margin-top: 16px;   /* jarak atas */
   margin-bottom: 12px; /* jarak bawah */
   padding-left: 8px;   /* padding kiri */
 }
 
-.hero-card .lead {
+.modal .lead {
   margin-bottom: 20px; /* jarak bawah */
   padding-left: 8px;   /* padding kiri */
 }
@@ -153,7 +153,7 @@
     <!-- HERO -->
     <section class="hero container">
       <div class="hero-grid">
-        <div class=".modal">
+        <div class="modal">
           <span class="kicker">Available for projects/collaborations</span>
           <h1>
             Hi, I am <span id="matrix-text" style="color:var(--brand)"></span>
@@ -235,5 +235,6 @@
   </script>
 </body>
 </html>
+
 
 
