--- a/about.html
+++ b/about.html
@@ -193,8 +193,8 @@
         "--ring": "rgba(255,0,255,.35)"
         }
       }
-    // Matrix Text Effect
-    const texts = ["ysurtod", "a Programmer", "a Video Editor", "a Creator"];
+    // Matrix
+    const texts = ["ysurtod", "a Programmer", "a Video Editor", "a Designer"];
     let textIndex = 0;
     const el = document.getElementById("matrix-text");
 
@@ -225,6 +225,7 @@
   </script>
 </body>
 </html>
+
 
 
 
