--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
     }
     .hero-grid { display:grid; grid-template-columns:1.1fr .9fr; gap:28px; align-items:center; position:relative; z-index:1 }
     .hero-card { background: var(--panel); border:1px solid rgba(148,163,184,.12); padding:22px; border-radius:var(--radius) }
-    .kicker { display:inline-block; padding:6px 10px; border-radius:999px; background:rgba(56,189,248,.12); color:var(--brand-2); font-weight:700; font-size:12px; text-transform:uppercase }
+    .kicker { display:inline-block; padding:6px 10px; border-radius:999px; background:rgba(56,189,248,.12); color:var(--brand-2); font-weight:700; font-size:12px; text-transform:uppercase; margin-top: 16px; margin-bottom: 12px; padding-left: 8px }
     h1 { font-size:clamp(28px,6vw,50px); line-height:1.1; margin:14px 0 10px }
     .lead { color:var(--muted); font-size:clamp(14px,2.6vw,18px) }
     .hero-cta { display:flex; gap:12px; margin-top:18px; flex-wrap:wrap }
@@ -225,6 +225,7 @@
   </script>
 </body>
 </html>
+
 
 
 
