--- a/about.html
+++ b/about.html
@@ -51,6 +51,18 @@
     .btn { display:inline-flex; padding:10px 14px; border-radius:12px; border:1px solid rgba(148,163,184,.15); background:var(--panel); box-shadow:var(--shadow) }
     .btn.primary { background:linear-gradient(135deg,var(--brand),var(--brand-2)); color:#00121f; font-weight:700; border-color:transparent }
 
+    .modal {
+  background: rgba(20, 20, 30, 0.95);
+  border-radius: 16px;
+  padding: 24px; /* padding default */
+  padding-left: 20px;   /* jarak kiri */
+  padding-right: 20px;  /* jarak kanan */
+  backdrop-filter: blur(6px);
+
+  /* Realistic shadow */
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
+}
+
 
     /* Hero */
     .hero { position: relative; padding:72px 0 24px }
@@ -225,6 +237,7 @@
   </script>
 </body>
 </html>
+
 
 
 
