--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
           </p>
           <div class="hero-cta">
             <a class="btn primary" href="./CV_Nama_Kamu.pdf" download>⬇ Download CV</a>
-            <a class="btn" href="Payhip.html">See Project</a>
+            <a class="btn" href="index.html">See Project</a>
           </div>
           <div class="badges">
             <span class="badge">HTML</span>
@@ -235,6 +235,7 @@
   </script>
 </body>
 </html>
+
 
 
 
