--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>shop ysurtod</title>
+  <title>ysurtod</title>
   <meta name="description" content="Toko digital untuk menjual file proyek, preset, desain, dan produk digital lainnya." />
   <meta name="color-scheme" content="light dark" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -604,4 +604,5 @@
   </script>
 </body>
 </html>
+
 
