--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </nav>
       <div class="actions">
         <div class="nav-right">
-          <a href="contoh vidio.html" class="btn primary">Contact Me</a>
+          <a href="contact.html" class="btn primary">Contact Me</a>
         </div>
       </div>
     </div>
@@ -604,5 +604,6 @@
   </script>
 </body>
 </html>
+
 
 
