--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
         </ul>
       </nav>
       <div class="actions">
-        <a class="btn primary" href="contoh-vidio.html">Contact Me</a>
+        <a class="btn primary" href="contact.html">Contact Me</a>
       </div>
     </div>
   </header>
@@ -235,6 +235,7 @@
   </script>
 </body>
 </html>
+
 
 
 
