--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    /* Basic styling from previous code */
     :root{
       --bg:#0b0f19; --panel:#0f172a; --text:#e5e7eb; --muted:#94a3b8; --line:#1f2937;
-      /* Warna merek yang lebih gelap */
       --brand:#1a2a47; 
       --brand-2:#2b384d; 
       --radius:16px; --shadow:0 10px 30px rgba(2,6,23,.35);
@@ -59,7 +57,7 @@
       border-color:transparent
     }
 
-    /* Hero/About */
+    /* Hero */
     .hero{padding:36px 0 16px}
     .about{
       display:grid; 
@@ -135,7 +133,7 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid var(--brand); /* Menggunakan warna yang diperbarui */
+      border: 3px solid var(--brand); 
     }
     
     .profile-name {
@@ -197,12 +195,12 @@
     <div class="container nav">
       <a class="brand" href="index.html"><span>ysurtod</span></a>
       <nav class="menu" aria-label="Main menu">
-        <a href="Porto.html">About</a>
-        <a href="Payhip.html">Project</a>
+        <a href="about.html">About</a>
+        <a href="index.html">Project</a>
       </nav>
       <div class="actions">
         <div class="nav-right">
-          <a href="contoh vidio.html" class="btn primary">Contact Me</a>
+          <a href="contact.html" class="btn primary">Contact Me</a>
         </div>
       </div>
     </div>
