--- a/contact.html
+++ b/contact.html
@@ -209,12 +209,12 @@
     <div class="container nav">
       <a class="brand" href="index.html"><span>ysurtod</span></a>
       <nav class="menu" aria-label="Main menu">
-        <a href="Porto.html">About</a>
-        <a href="Payhip.html">Project</a>
+        <a href="about.html">About</a>
+        <a href="index.html">Project</a>
       </nav>
       <div class="actions">
         <div class="nav-right">
-          <a href="contoh vidio.html" class="btn primary">Contact Me</a>
+          <a href="contact.html" class="btn primary">Contact Me</a>
         </div>
       </div>
     </div>
