--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,6 @@
     .btn{display:inline-flex; align-items:center; gap:10px; padding:10px 14px; border-radius:12px; border:1px solid rgba(148,163,184,.15); background:var(--panel); box-shadow:var(--shadow); cursor:pointer}
     .btn:hover{filter:brightness(1.05)}
     .btn.primary{
-      /* Menggunakan variabel brand yang diperbarui */
       background:linear-gradient(135deg,var(--brand),var(--brand-2)); 
       color:#00121f; 
       font-weight:700; 
@@ -82,8 +81,8 @@
 
     /* Card */
     .card {
-      background: rgba(15, 23, 42, 0.4); /* Transparan dengan sedikit warna */
-      backdrop-filter: blur(10px); /* Efek blur menyatu dengan background body */
+      background: rgba(15, 23, 42, 0.4); 
+      backdrop-filter: blur(10px); 
       border: 1px solid rgba(148, 163, 184, .14);
       border-radius: var(--radius);
       padding: 20px;
@@ -234,7 +233,7 @@
       <div class="profile-section">
         <img class="profile-picture" src="https://media1.tenor.com/m/urChzCzOV3QAAAAd/kaoru-hana-wa-rin-to-saku-the-fragrant-flower.gif" alt="Profile Picture"/>
         <h3 class="profile-name">ysurtod</h3>
-        <p class="muted-text">Digital Artist & Creator</p>
+        <p class="muted-text">Surya Putra</p>
       </div>
       <div class="contact-list">
         <div class="section-title">
