--- a/contact.html
+++ b/contact.html
@@ -233,7 +233,7 @@
       <div class="profile-section">
         <img class="profile-picture" src="https://media1.tenor.com/m/urChzCzOV3QAAAAd/kaoru-hana-wa-rin-to-saku-the-fragrant-flower.gif" alt="Profile Picture"/>
         <h3 class="profile-name">ysurtod</h3>
-        <p class="muted-text">Surya Putra Adhi Prastya.</p>
+        <p class="muted-text">Surya Putra Adhi Prastya</p>
       </div>
       <div class="contact-list">
         <div class="section-title">
