--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     img{max-width:100%; display:block}
     .container{max-width:1120px; margin:0 auto; padding:0 18px}
 
-    /* Header */
     header{position:sticky; top:0; z-index:50; backdrop-filter:saturate(1.2) blur(10px); background:linear-gradient(180deg,rgba(2,6,23,.85),rgba(2,6,23,.5)); border-bottom:1px solid rgba(148,163,184,.14)}
     :root.light header{background:linear-gradient(180deg,rgba(255,255,255,.9),rgba(255,255,255,.65))}
     .nav{display:flex; align-items:center; justify-content:space-between; padding:14px 0}
@@ -35,20 +34,17 @@
     .btn:hover{filter:brightness(1.05)}
     .btn.primary{background:linear-gradient(135deg,var(--brand),var(--brand-2)); color:#00121f; font-weight:700; border-color:transparent}
 
-    /* Hero/About */
     .hero{padding:36px 0 16px}
     .about{display:grid; grid-template-columns:1fr; gap:16px; background:linear-gradient(180deg,var(--panel),rgba(56,189,248,.06)); border:1px solid rgba(148,163,184,.14); padding:20px; border-radius:var(--radius)}
     .about h1{margin:0 0 10px; font-size:clamp(22px,5vw,32px)}
     .about p{margin:0; color:var(--muted)}
 
-    /* Toolbar */
     .toolbar{display:flex; gap:10px; flex-wrap:wrap; margin:20px 0}
     .search{flex:1 1 300px; padding:12px 14px; border-radius:12px; border:1px solid rgba(148,163,184,.16); background:var(--panel); color:var(--text)}
     .tabs{display:flex; gap:10px; flex-wrap:wrap}
     .tab{padding:8px 12px; border:1px solid rgba(148,163,184,.18); border-radius:12px; background:var(--panel); color:var(--muted); cursor:pointer}
     .tab.active{background:linear-gradient(135deg,var(--brand),var(--brand-2)); color:#00121f; font-weight:700; border-color:transparent}
 
-    /* Grid */
     .grid{display:grid; grid-template-columns:repeat(12,1fr); gap:16px}
     .product{grid-column:span 12; background:var(--panel); border:1px solid rgba(148,163,184,.14); border-radius:16px; overflow:hidden; transition:transform .2s; box-shadow:var(--shadow); cursor:pointer; position:relative}
     .product:hover{transform:translateY(-3px)}
@@ -63,15 +59,13 @@
     @media(min-width:640px){ .product{grid-column:span 6} }
     @media(min-width:980px){ .product{grid-column:span 3} }
 
-    /* Footer */
     footer{padding:40px 0 60px; color:var(--muted); border-top:1px solid rgba(148,163,184,.14); margin-top:30px}
     .pay{display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:center; margin-top:10px}
     .pay span{padding:6px 10px; border-radius:8px; border:1px solid rgba(148,163,184,.18); background:var(--panel)}
 
-    /* Modal + slider */
     .modal-backdrop{
       position:fixed; inset:0; display:none; align-items:center; justify-content:center;
-      z-index:90; /* Ditingkatkan untuk memastikan di atas segalanya */
+      z-index:90; 
       background:var(--overlay);
       backdrop-filter: blur(6px) saturate(1.1);
     }
@@ -82,7 +76,7 @@
       box-shadow: 0 20px 60px rgba(0,0,0,.45), 0 0 0 1px rgba(148,163,184,.2) inset;
       opacity:0; transform: scale(.95); animation: modalIn .35s ease-out forwards;
       position:relative;
-      z-index:100; /* Lebih tinggi dari backdrop */
+      z-index:100; 
     }
     @media(max-width:900px){ .modal{grid-template-columns:1fr;} }
 
@@ -98,10 +92,10 @@
     }
     .viewer img, .viewer iframe{
       width:100%; height:100%; object-fit:cover; border:0;
-      display:block; /* Penting untuk iframe agar tidak ada margin */
+      display:block; 
     }
     .viewer img {
-      object-fit: contain; /* Untuk gambar, agar tidak terpotong */
+      object-fit: contain;
     }
 
     .thumbs{
@@ -124,7 +118,7 @@
 
     .modal .right{
       display:flex; flex-direction:column; gap:10px;
-      z-index:3; /* Pastikan ini lebih tinggi dari .left */
+      z-index:3;
       position:relative;
     }
     .modal h2{margin:0}
@@ -133,11 +127,11 @@
     .modal .actions{
       display:flex; gap:10px; margin-top:12px;
       position:relative;
-      z-index:4; /* Tombol ini harus di atas */
+      z-index:4;
     }
     .close-x{
       position:absolute; right:14px; top:12px; background:transparent; border:1px solid rgba(148,163,184,.25); color:var(--muted); cursor:pointer; font-size:18px; border-radius:10px; padding:6px 10px;
-      z-index:101; /* Paling tinggi agar selalu bisa diakses */
+      z-index:101; 
     }
 
     .modal {
@@ -159,7 +153,6 @@
   -webkit-overflow-scrolling: touch;
 }
 
-    /* Animations */
     @keyframes fadeInBlock {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -353,7 +346,7 @@
 
   <footer>
     <div class="container" style="text-align:center">
-      <div>© <span id="year"></span> ysurtod</div>
+      <div>© <span id=""></span>@ysurtod</div>
       <div class="pay">
         <span>Maestro</span><span>Mastercard</span><span>PayPal</span><span>Visa</span><span>Discover</span>
       </div>
@@ -604,6 +597,7 @@
   </script>
 </body>
 </html>
+
 
 
 
