--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
 
   <footer>
     <div class="container">
-      <p>© <span id=""></span>@ysurtod</p>
+      <p>©ysurtod</p>
     </div>
   </footer>
 
@@ -223,6 +223,7 @@
   </script>
 </body>
 </html>
+
 
 
 
