--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@
     }
 
     .modal {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 16px;
-  max-height: 90vh; 
-  overflow-y: auto; 
-}
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 16px;
+      max-height: 90vh; 
+      overflow-y: auto; 
+    }
 
-@media (max-width: 900px) {
-  .modal {
-    grid-template-columns: 1fr;
-    padding: 10px; 
-  }
-}
-.modal .left, .modal .right {
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-}
+    @media (max-width: 900px) {
+      .modal {
+        grid-template-columns: 1fr;
+        padding: 10px; 
+      }
+    }
+    .modal .left, .modal .right {
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+    }
 
     @keyframes fadeInBlock {
       from { opacity: 0; transform: translateY(20px); }
@@ -219,7 +219,6 @@
           <div class="meta">
             <span class="price">Free</span>
             <div class="links">
-              <a class="btn" href="#" onclick="alert('Fitur keranjang telah dihapus.'); return false;">Add</a>
               <a class="btn primary" href="#" onclick="window.open(this.closest('.product').dataset.download, '_blank'); return false;">Buy</a>
             </div>
           </div>
@@ -238,7 +237,6 @@
           <div class="meta">
             <span class="price">Free</span>
             <div class="links">
-              <a class="btn" href="#" onclick="alert('Fitur keranjang telah dihapus.'); return false;">Add</a>
               <a class="btn primary" href="#" onclick="window.open(this.closest('.product').dataset.download, '_blank'); return false;">Buy</a>
             </div>
           </div>
@@ -257,7 +255,6 @@
           <div class="meta">
             <span class="price">Free</span>
             <div class="links">
-              <a class="btn" href="#" onclick="alert('Fitur keranjang telah dihapus.'); return false;">Add</a>
               <a class="btn primary" href="#" onclick="window.open(this.closest('.product').dataset.download, '_blank'); return false;">Buy</a>
             </div>
           </div>
@@ -276,7 +273,6 @@
           <div class="meta">
             <span class="price">Free</span>
             <div class="links">
-              <a class="btn" href="#" onclick="alert('Fitur keranjang telah dihapus.'); return false;">Add</a>
               <a class="btn primary" href="#" onclick="window.open(this.closest('.product').dataset.download, '_blank'); return false;">Buy</a>
             </div>
           </div>
@@ -295,7 +291,6 @@
           <div class="meta">
             <span class="price">Free</span>
             <div class="links">
-              <a class="btn" href="#" onclick="alert('Fitur keranjang telah dihapus.'); return false;">Add</a>
               <a class="btn primary" href="#" onclick="window.open(this.closest('.product').dataset.download, '_blank'); return false;">Buy</a>
             </div>
           </div>
@@ -314,7 +309,6 @@
           <div class="meta">
             <span class="price">Free</span>
             <div class="links">
-              <a class="btn" href="#" onclick="alert('Fitur keranjang telah dihapus.'); return false;">Add</a>
               <a class="btn primary" href="#" onclick="window.open(this.closest('.product').dataset.download, '_blank'); return false;">Buy</a>
             </div>
           </div>
@@ -337,8 +331,7 @@
         <div class="price" id="modalPrice">Rp 0</div>
         <p id="modalDesc">Deskripsi produk akan muncul di sini.</p>
         <div class="actions">
-          <button class="btn" id="modalAdd">Add</button>
-          <button class="btn primary" id="modalBuy">Buy Now</button>
+          <button class="btn primary" id="modalBuy" onclick="if(currentProduct.download) window.open(currentProduct.download,'_blank'); else alert('No download link available.');">Buy Now</button>
         </div>
       </div>
     </div>
@@ -346,7 +339,7 @@
 
   <footer>
     <div class="container" style="text-align:center">
-      <div>© <span id=""></span>@ysurtod</div>
+      <div>© <span id="year"></span> @ysurtod</div>
       <div class="pay">
         <span>Maestro</span><span>Mastercard</span><span>PayPal</span><span>Visa</span><span>Discover</span>
       </div>
@@ -355,7 +348,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('year').textContent = new Date().getFullYear();
+      document.getElementById('year').textContent = new Date().getFullYear(); // Fixed: Added id="year" to span
 
       const tabs = document.querySelectorAll('.tab');
       const search = document.getElementById('search');
@@ -391,7 +384,7 @@
       const modalTitle = document.getElementById('modalTitle');
       const modalPrice = document.getElementById('modalPrice');
       const modalDesc = document.getElementById('modalDesc');
-      const modalAdd = document.getElementById('modalAdd');
+      // const modalAdd = document.getElementById('modalAdd'); // Removed: "Add" button is no longer in HTML
       const modalBuy = document.getElementById('modalBuy');
       const modalClose = document.getElementById('modalClose');
       const thumbsWrap = document.getElementById('thumbs');
@@ -529,8 +522,8 @@
         modalPrice.textContent = priceText;
         modalDesc.textContent = desc;
 
-        modalAdd.onclick = ()=>{ alert('Fitur keranjang telah dihapus.'); };
-        modalBuy.onclick = ()=>{ if(currentProduct.download) window.open(currentProduct.download,'_blank'); else alert('Tidak ada link download.'); };
+        // modalAdd.onclick = ()=>{ alert('Fitur keranjang telah dihapus.'); }; // Removed
+        modalBuy.onclick = ()=>{ if(currentProduct.download) window.open(currentProduct.download,'_blank'); else alert('No download link available.'); }; // Changed alert language
 
         renderThumbs();
         showMedia(0);
@@ -597,7 +590,3 @@
   </script>
 </body>
 </html>
-
-
-
-
