--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
   <footer>
     <div class="container" style="text-align:center">
-      <div>© <span id="year"></span> @ysurtod</div>
+      <div>©ysurtod</div>
       <div class="pay">
         <span>Maestro</span><span>Mastercard</span><span>PayPal</span><span>Visa</span><span>Discover</span>
       </div>
@@ -590,3 +590,4 @@
   </script>
 </body>
 </html>
+
