--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="hero-card" aria-hidden="true">
-          <img src="https://media1.tenor.com/m/aLSR-ndV-A8AAAAd/shoya-ishida.gif" alt="My Picture" style="border-radius:16px"/>
+          <img src="https://s4.ezgif.com/tmp/ezgif-48bee214823413.gif" alt="My Picture" style="border-radius:16px"/>
         </div>
       </div>
     </section>
@@ -223,6 +223,7 @@
   </script>
 </body>
 </html>
+
 
 
 
