--- a/contact.html
+++ b/contact.html
@@ -107,6 +107,7 @@
         margin: 0 15px;
         font-size: 24px;
         white-space: nowrap;
+        /* Gradien pada Social Media tetap dipertahankan */
         background: linear-gradient(90deg, #f0f0f0, #7d7d7d, #f0f0f0);
         background-size: 200% auto;
         -webkit-background-clip: text;
@@ -187,14 +188,13 @@
       align-items: center; 
       justify-content: center; 
       gap: 8px; 
-      color: white; 
+      color: white;
     }
 
     .fading-text span {
         background: none;
         -webkit-background-clip: unset;
         -webkit-text-fill-color: unset;
-        color: white; 
         animation: none;
     }
 
@@ -203,7 +203,6 @@
         background: none;
         -webkit-background-clip: unset;
         -webkit-text-fill-color: unset;
-        color: white; 
         animation: none;
     }
 
