--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
             performance, and accessibility. Here are my work results and my experience.
           </p>
           <div class="hero-cta">
-            <a class="btn primary" href="./CV_Nama_Kamu.pdf" download>⬇ Download CV</a>
+            <a class="btn primary" href="CV" download>⬇ Download CV</a>
             <a class="btn" href="index.html">See Project</a>
           </div>
           <div class="badges">
@@ -223,6 +223,7 @@
   </script>
 </body>
 </html>
+
 
 
 
