--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact - ysurtod</title>
+  <title>Me - ysurtod</title>
   <meta name="description" content="Contact page to reach ysurtod." />
   <meta name="color-scheme" content="light dark" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
     body{
       margin:0; 
       font-family:Inter,system-ui,Segoe UI; 
-      background-image: url('https://media1.tenor.com/m/nWncH_FhMckAAAAC/kunt-black-kunt.gif');
+      background-image: url('https://media1.tenor.com/m/53I_s_sx9ncAAAAC/black-space-stars.gif');
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
@@ -76,7 +76,8 @@
     }
     .about h1{margin:0 0 10px; font-size:clamp(22px,5vw,32px)}
     .about p{margin:0; color:var(--muted)}
-    
+
+    /* Card */
     .card {
       background: rgba(15, 23, 42, 0.4); 
       backdrop-filter: blur(10px); 
@@ -107,17 +108,11 @@
         margin: 0 15px;
         font-size: 24px;
         white-space: nowrap;
-        /* Gradien pada Social Media tetap dipertahankan */
-        background: linear-gradient(90deg, #f0f0f0, #7d7d7d, #f0f0f0);
-        background-size: 200% auto;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        animation: text-gradient-animation 4s linear infinite;
-    }
-    @keyframes text-gradient-animation {
-      to {
-        background-position: 200% center;
-      }
+        background: none;
+        -webkit-background-clip: unset;
+        -webkit-text-fill-color: unset;
+        color: #ffffff;
+        animation: none;
     }
 
     .section-title::before,
@@ -188,27 +183,15 @@
       align-items: center; 
       justify-content: center; 
       gap: 8px; 
-      color: white;
+      color: var(--text);
     }
 
-    .fading-text span {
-        background: none;
-        -webkit-background-clip: unset;
-        -webkit-text-fill-color: unset;
-        animation: none;
-    }
-
+    .fading-text span,
     .fading-text .kanji {
-        font-family: 'Inter', system-ui, 'Segoe UI', sans-serif; 
         background: none;
         -webkit-background-clip: unset;
         -webkit-text-fill-color: unset;
         animation: none;
-    }
-
-    @keyframes fading-text-gradient {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 100% 50%; }
     }
 
     .contact-list {
@@ -252,6 +235,7 @@
     .contact-item .text {
       font-weight: 600;
       font-size: 1.1em;
+      color: #ffffff; /* Mengubah warna teks menjadi putih polos */
     }
 
     footer{padding:40px 0 60px; color:var(--muted); border-top:1px solid rgba(148,163,184,.14); margin-top:30px; text-align: center;}
@@ -296,11 +280,11 @@
       <div class="profile-section">
         <img class="profile-picture" src="https://media1.tenor.com/m/urChzCzOV3QAAAAd/kaoru-hana-wa-rin-to-saku-the-fragrant-flower.gif" alt="Profile Picture"/>
         <div class="profile-name-container">
-          <h3 class="profile-name">ysurtod</h3>
+            <h3 class="profile-name">ysurtod</h3>
         </div>
         <p class="fading-text">
-          <span>Surya Putra Adhi Prastya</span> 
-          <span class="kanji">悪役</span>
+            <span>Surya Putra Adhi Prastya</span> 
+            <span class="kanji">悪役</span>
         </p>
       </div>
       <div class="contact-list">
@@ -327,7 +311,7 @@
         </a>
         <a class="contact-item" href="https://wa.me/62085934709205" target="_blank">
             <div class="icon">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png" alt="WhatsApp Logo"/>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png" alt="WhatsApp Logo"/>
             </div>
             <span class="text">WhatsApp</span>
         </a>
