--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div class="hero-card" aria-hidden="true">
-          <img src="https://media1.tenor.com/m/9aXyxmnYW7oAAAAC/my-dress-up-darling-sono-bisque-doll-wa-koi-wo-suru.gif" alt="My Picture" style="border-radius:16px"/>
+          <img src="https://media.tenor.com/VY9gfHgiNOgAAAAi/cute-stare.gif" alt="My Picture" style="border-radius:16px"/>
         </div>
       </div>
     </section>
@@ -223,6 +223,7 @@
   </script>
 </body>
 </html>
+
 
 
 
